package handler

import (
	"context"

	"github.com/hsibAD/payment-service/internal/domain"
	pb "github.com/hsibAD/payment-service/proto"
	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

type PaymentHandler struct {
	pb.UnimplementedPaymentServiceServer
}

func RegisterServices(s *grpc.Server, cfg interface{}) {
	pb.RegisterPaymentServiceServer(s, &PaymentHandler{})
}

func (h *PaymentHandler) InitiatePayment(ctx context.Context, req *pb.InitiatePaymentRequest) (*pb.Payment, error) {
	// TODO: Implement payment initiation logic
	return nil, status.Error(codes.Unimplemented, "method InitiatePayment not implemented")
}

func (h *PaymentHandler) ProcessCreditCardPayment(ctx context.Context, req *pb.CreditCardPaymentRequest) (*pb.Payment, error) {
	// TODO: Implement credit card payment processing logic
	return nil, status.Error(codes.Unimplemented, "method ProcessCreditCardPayment not implemented")
}

func (h *PaymentHandler) InitiateMetaMaskPayment(ctx context.Context, req *pb.MetaMaskPaymentRequest) (*pb.MetaMaskPaymentResponse, error) {
	// TODO: Implement MetaMask payment initiation logic
	return nil, status.Error(codes.Unimplemented, "method InitiateMetaMaskPayment not implemented")
}

func (h *PaymentHandler) ConfirmMetaMaskPayment(ctx context.Context, req *pb.ConfirmMetaMaskPaymentRequest) (*pb.Payment, error) {
	// TODO: Implement MetaMask payment confirmation logic
	return nil, status.Error(codes.Unimplemented, "method ConfirmMetaMaskPayment not implemented")
}

func (h *PaymentHandler) GetPayment(ctx context.Context, req *pb.GetPaymentRequest) (*pb.Payment, error) {
	// TODO: Implement get payment logic
	return nil, status.Error(codes.Unimplemented, "method GetPayment not implemented")
}

func (h *PaymentHandler) GetPaymentsByOrder(ctx context.Context, req *pb.GetPaymentsByOrderRequest) (*pb.GetPaymentsByOrderResponse, error) {
	// TODO: Implement get payments by order logic
	return nil, status.Error(codes.Unimplemented, "method GetPaymentsByOrder not implemented")
}

func (h *PaymentHandler) GetPendingPayments(ctx context.Context, req *pb.PendingPaymentsRequest) (*pb.GetPaymentsByOrderResponse, error) {
	// TODO: Implement get pending payments logic
	return nil, status.Error(codes.Unimplemented, "method GetPendingPayments not implemented")
} 